minor grammer corrections

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="sub">
           Robocon is a National Level Robotics Competition where a college team has to create robots to compete in a game.
           <i><br>I was a part of the programming team , responsible for creating the navigation system of the Automatic robot <br>
-            During this i utilised C for <b>Arduino</b> Programming and <b>Python</b> on a Raspberry Pi. Also I learned to work with a large group of people
+            During this I utilised C for <b>Arduino</b> Programming and <b>Python</b> on a Raspberry Pi. Also I learned to work with a large group of people
           </i>
         </div><br>
       </li>
