--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     currently under construction!<br>
-    <a href="./resume/index.html">resume</a>
+    <a href="./resume/">resume</a>
   </body>
 </html>
