added temporary page

--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <link rel="stylesheet" type="text/css" href="./theme.css">
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <meta charset="utf-8">
     <title>mainpage</title>
   </head>
   <body>
-    currently under construction!<br>
-    <a href="./resume/index.html">resume</a>
+    <div class="text">
+      <h1>Main website is currently under Development!</h1>
+    <br>
+      <form action="./resume/">
+      <input  class="button" type="submit" value="Résumé" />
+  </form></div>
   </body>
 </html>
