--- a/resume/index.html
+++ b/resume/index.html
@@ -1,83 +1,138 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="./theme.css">
-    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-    <title>My Resume</title>
-    <div class="name">
-      <h1>Aakash Khatu</h1>
-    </div><hr width=50%>
-    <div class="contact">
-      <a href="mailto:aakashkhatu98@gmail.com"><i class="fas fa-envelope"></i> aakashkhatu98@gmail</a> <i class="fas fa-map-marker-alt"></i> Airoli, Navi Mumbai <br>
-      <a href="https://github.com/AakashKhatu"><i class="fab fa-github"></i> github.com/AakashKhatu </a>
-    </div>
-  </head>
-  <body>
-    <h1 class="text header">Education</h1>
-    <ul class="text edu">
-    <li>Bachelor of Engineering (B.E), Computer Science & Engineering<br>
-        <div class="text sub">
+
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" type="text/css" href="./theme.css">
+  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+  <title>My Resume</title>
+  <div class="name">
+    <h1>Aakash Khatu</h1>
+  </div>
+  <hr width=50%>
+  <div class="contact">
+    <a href="mailto:aakashkhatu98@gmail.com"><i class="fas fa-envelope"></i> aakashkhatu98@gmail</a> <i class="fas fa-map-marker-alt"></i> Airoli, Navi Mumbai <br>
+    <a href="https://github.com/AakashKhatu"><i class="fab fa-github"></i> github.com/AakashKhatu </a>
+  </div>
+</head>
+
+<body>
+  <h1 class="text header">Education</h1>
+  <ul class="text edu">
+    <li>Bachelor of Engineering (B.E), Computer Science & Engineering ( Current )<br>
+      <div class="text sub">
         Year of Completion: 2021<br>
         Terna Engineering College<br>
-        CGPA : 7.20/10<br></div>
+        CGPA (First Year) : 7.20/10<br></div>
     </li>
     <li>
-    XII (Senior Secondary), Science<br>
-    <div class="text sub">
-    Year of Completion: 2017<br>
+      XII (Senior Secondary), Science<br>
+      <div class="text sub">
+        Year of Completion: 2017<br>
         HSC Board (IITIAN's Pace Junior Science College, Powai)<br>
         Percentage : 75.00%<br>
-        </div>
+      </div>
     </li>
     <li>
-    X (Secondary)<br>
-        <div class="text sub">Year of Completion: 2014 <br>
+      X (Secondary)<br>
+      <div class="text sub">Year of Completion: 2014 <br>
         CBSE Board (DAV Public School, Airoli) <br>
         CGPA : 9.10/10 <br></div>
     </li>
-    </ul>
-    <h1 class="text header"> Skills </h1>
-    <ul class="text edu">
-      <li>Proficient in <b>C</b> & <b>Python</b></li>
-      <li>Have experience in C++, C# (Unity ) , Django, Java, Web Design (HTML & CSS) and Graphics Design (Adobe Illustrator & Photoshop)</li>
-    </ul>
-    <h1 class="text header"> Courses & Projects </h1>
-    <ul class="text edu">
-      <li>NPTEL course for Introduction to Machine Learning
-        <div class="sub">
-          This course provides a concise introduction to the fundamental concepts in machine learning and popular machine learning algorithms.<br>
-          <i>I took up this course to learn the basics of <b>Machine Learning</b> for a personal project.<br>
-          </i>
-        </div><br>
-      </li>
-      <li>ABU Robocon 2017-18<br>
-        <div class="sub">
-          Robocon is a National Level Robotics Competition where a college team has to create robots to compete in a game.
-          <i><br>I was a part of the programming team , responsible for creating the navigation system of the Automatic robot <br>
-            During this I utilised C for <b>Arduino</b> Programming and <b>Python</b> on a Raspberry Pi. Also I learned to work with a large group of people
-          </i>
-        </div><br>
-      </li>
-      <li>Discord Update Notification Bot
-        <div class="sub">
-          This Program is a Discord Bot that notifies the user whenever a followed game updates also has other .
-          <i><br>Main purpose of this project was to learn <b>Concurrent Programming</b> in <b>Python</b> using the Asyncio library.
-            Also learned to use <b>Git</b> and used Heroku for hosting the bot Online.
-          </i>
-          <a href="https://github.com/AakashKhatu/Discord-CSGO-Update-bot">github.com/AakashKhatu/Discord-CSGO-Update-bot</a>
-        </div><br>
-      </li>
-      <li>Graphics Designing for E-Sports teams and players
-        <div class="sub">
-          Designed Logos and Animations for E-Sports teams and Players as a hobby. <br>
-          <a href="https://zer0k.imgur.com/">zer0k.imgur.com</a>
-        </div><br>
-      </li>
-    </ul>
-    <div class="hide">
-    <label class="text Header" for="item-3"><h1>Contact Me<h1></label>
+  </ul>
+  <h1 class="text header"> Skills </h1>
+  <ul class="text edu">
+    <li>Proficient in <b>C</b> & <b>Python</b></li>
+    <li>Have experience in C++, C# (Unity ) , Django, Java, Web Design (HTML & CSS) and Graphics Design (Adobe Illustrator & Photoshop)</li>
+    <li>I am a Fast Learner so I can understand and learn to implement new technologies pretty quickly.</li>
+  </ul>
+  <h1 id="courses" class="text header">Certification Courses</h1>
+  <ul class="text edu">
+    <li>NPTEL course for Introduction to Machine Learning
+      <div class="sub">
+        This course provides a concise introduction to the fundamental concepts in machine learning and popular machine learning algorithms.<br>
+        <i>I took up this course to learn the basics of <b>Machine Learning</b> for a personal project.<br>
+        </i>
+        <a href="https://nptel.ac.in/noc/E_Certificate/noc18-cs40/NPTEL18CS40S116713131810141890.jpg">Certificate</a>
+      </div><br>
+    </li>
+    <li>NPTEL course for Programming, Data Structures and Algorithms Using Python
+      <div class="sub">
+        This course is an introduction to programming and problem solving in Python.<br>
+        <i>I took up this course to certify my <b>Python</b> Skills.<br>
+        </i>
+        <a href="https://nptel.ac.in/noc/E_Certificate/noc19-cs08/NPTEL19CS08S11600052191088556.jpg">Certificate</a>
+      </div><br>
+    </li>
+  </ul>
+  <h1 id="projects" class="text header">Projects </h1>
+  <ul class="text edu">
+    <li>ABU Robocon 2017-18<br>
+      <div class="sub">
+        Robocon is a National Level Robotics Competition where a college team has to create robots to compete in a game.
+        <i><br>I was a part of the programming team , responsible for creating the navigation system of the Automatic robot <br>
+          During this I utilised C for <b>Arduino</b> Programming and <b>Python</b> on a Raspberry Pi. Also I learned to work in a large group.
+        </i>
+      </div><br>
+    </li>
+    <li>ParallelOCR ( <i>ongoing</i> )
+      <div class="sub">
+        Python Application Using Parallel Processing and Machine Learning to Make Optical Character Recognition faster on Capable Hardware.<br>
+        <i>This project is currently being worked on by me with my Professor Prathamesh Tugaonkar. <br><br>
+        this project helped me to practically implement my <b>Machine Learning</b> knowledge and I learned to Gather and Format Data for Training. In this project i also learned to efficiently divide a linear program into pieces to be Efficient in <b>Parallel Processing</b> situations. <br> </i>
+        <a href="https://aakashkhatu.github.io/ParallelOCR/">Project Progress</a><br>
+        <a href="https://github.com/AakashKhatu/ParallelOCR">github.com/AakashKhatu/ParallelOCR</a>
+      </div><br>
+    </li>
+    <li>BetterERP
+      <div class="sub">
+        Personal use website for making my College ERP easier to use and add QOL features which save a lot of time.<br>
+        <i>I made this website to save my own time over the upcoming 2 years of college as we have to use the ERP for everything in college.
+          I used <b>Selenium</b> in <b>Python</b> for Scraping the data and  <b>Django</b> as the server backend. This Website also helps me to automatically Complete or Format Assignments using data from Search Engines.<br>
+        </i>
+        <a href="https://aakashkhatu.github.io/better-erp/">Detailed Project Description</a><br>
+        [Github repository is private as it has my college-ERP's credentials and also because this project is only for personal use]
+      </div><br>
+    </li>
+    <li>iDontNeedThis ( <i>ongoing</i> )
+      <div class="sub">
+        Webservice to Streamline the process of Donating<br>
+        <i>This project was made in a Group of 5 people lead by me for the RAIT Hackathon completely in 24 hours . It includes an Android, iOS App and a Website<br>
+          As the Leader my main job was to Present the Project and Time Manage my team. I also created the backend in <b>Django</b> to tie together the Apps and Website.
+          We(team) are planning to continue this project in other upcoming Hackathons.
+        </i><br>
+        <a href="https://github.com/AakashKhatu/iDontNeedThis">github.com/AakashKhatu/iDontNeedThis</a><br>
+      </div><br>
+    </li>
+    <li>itsNeverTooLate
+      <div class="sub">
+        TamperMonkey UserScript to Allow the Uploading of Assignments to the College ERP after the Due Date has passed.<br>
+        <i>The main purpose of this was to show the limitations of the College ERP to my Teachers. The UserScript was written in <b>JavaScript</b> in 6 minutes after some research.
+        </i>
+        <a href="https://greasyfork.org/en/scripts/381846-itsnevertoolate">greasyfork.org/en/scripts/381846-itsnevertoolate</a><br>
+      </div><br>
+    </li>
+    <li>Discord Update Notification Bot
+      <div class="sub">
+        This Program is a Discord Bot that notifies the user whenever a followed game updates also has other fun features.
+        <i><br>Main purpose of this project was to learn <b>Concurrent Programming</b> in <b>Python</b> using the Asyncio library.
+          Also learned to use <b>Git</b> and used Heroku for hosting the bot Online.
+        </i>
+        <a href="https://github.com/AakashKhatu/Discord-CSGO-Update-bot">github.com/AakashKhatu/Discord-CSGO-Update-bot</a>
+      </div><br>
+    </li>
+    <li>Graphics Designing for E-Sports teams and players
+      <div class="sub">
+        Designed Logos and Animations for E-Sports teams and Players as a hobby. <br>
+        <a href="zer0k.imgur.com/all/">zer0k.imgur.com</a>
+      </div><br>
+    </li>
+  </ul>
+  <div class="hide">
+    <label class="text Header" for="item-3">
+      <h1>Contact Me<h1>
+    </label>
     <input type="checkbox" name="one" id="item-3">
     <div class="contact">
       <form action="https://formspree.io/aakashkhatu98@gmail.com" method="POST">
@@ -87,6 +142,7 @@
         <input type="submit" value="Send">
       </form>
     </div>
-    </div>
-  </body>
+  </div>
+</body>
+
 </html>
