reordered resume and added resonance in projects

--- a/resume/index.html
+++ b/resume/index.html
@@ -47,25 +47,6 @@
     <li>Have experience in C++, C# (Unity ) , Django, Java, Web Design (HTML & CSS) and Graphics Design (Adobe Illustrator & Photoshop)</li>
     <li>I am a Fast Learner so I can understand and learn to implement new technologies pretty quickly.</li>
   </ul>
-  <h1 id="courses" class="text header">Certification Courses</h1>
-  <ul class="text edu">
-    <li>NPTEL course for Introduction to Machine Learning
-      <div class="sub">
-        This course provides a concise introduction to the fundamental concepts in machine learning and popular machine learning algorithms.<br>
-        <i>I took up this course to learn the basics of <b>Machine Learning</b> for a personal project.<br>
-        </i>
-        <a href="https://nptel.ac.in/noc/E_Certificate/noc18-cs40/NPTEL18CS40S116713131810141890.jpg">Certificate</a>
-      </div><br>
-    </li>
-    <li>NPTEL course for Programming, Data Structures and Algorithms Using Python
-      <div class="sub">
-        This course is an introduction to programming and problem solving in Python.<br>
-        <i>I took up this course to certify my <b>Python</b> Skills.<br>
-        </i>
-        <a href="https://nptel.ac.in/noc/E_Certificate/noc19-cs08/NPTEL19CS08S11600052191088556.jpg">Certificate</a>
-      </div><br>
-    </li>
-  </ul>
   <h1 id="projects" class="text header">Projects </h1>
   <ul class="text edu">
     <li>ABU Robocon 2017-18<br>
@@ -74,6 +55,15 @@
         <i><br>I was a part of the programming team , responsible for creating the navigation system of the Automatic robot <br>
           During this I utilised C for <b>Arduino</b> Programming and <b>Python</b> on a Raspberry Pi. Also I learned to work in a large group.
         </i>
+      </div><br>
+    </li>
+	<li>Website for College Cultural Fest - Resonance 2019<br>
+      <div class="sub">
+        Marvel Themed Website for my College's Annual Cultural Festival<br>
+        <i>Learned the basics of <b>AJAX</b> using vanilla <b>JavaScript</b> and used <b>Firebase</b> for hosting and as the backend. The biggest challenge was to complete the Website as fast as possible as i was assigned the project 2 weeks before the event.<br>
+        </i>
+		<a href="https://github.com/AakashKhatu/Resonance2019">github.com/AakashKhatu/Resonance2019</a><br>
+		<a href="https://aakashkhatu.github.io/Resonance2019/">aakashkhatu.github.io/Resonance2019 (mirror , not fully functional)</a>(Original Website hosted on firebase was taken down after the event)<br>
       </div><br>
     </li>
     <li>ParallelOCR ( <i>ongoing</i> )
@@ -126,6 +116,25 @@
       <div class="sub">
         Designed Logos and Animations for E-Sports teams and Players as a hobby. <br>
         <a href="zer0k.imgur.com/all/">zer0k.imgur.com</a>
+      </div><br>
+    </li>
+  </ul>
+ <h1 id="courses" class="text header">Certification Courses</h1>
+  <ul class="text edu">
+    <li>NPTEL course for Introduction to Machine Learning
+      <div class="sub">
+        This course provides a concise introduction to the fundamental concepts in machine learning and popular machine learning algorithms.<br>
+        <i>I took up this course to learn the basics of <b>Machine Learning</b> for a personal project.<br>
+        </i>
+        <a href="https://nptel.ac.in/noc/E_Certificate/noc18-cs40/NPTEL18CS40S116713131810141890.jpg">Certificate</a>
+      </div><br>
+    </li>
+    <li>NPTEL course for Programming, Data Structures and Algorithms Using Python
+      <div class="sub">
+        This course is an introduction to programming and problem solving in Python.<br>
+        <i>I took up this course to certify my <b>Python</b> Skills.<br>
+        </i>
+        <a href="https://nptel.ac.in/noc/E_Certificate/noc19-cs08/NPTEL19CS08S11600052191088556.jpg">Certificate</a>
       </div><br>
     </li>
   </ul>
