added project dates and removed contact

--- a/resume/index.html
+++ b/resume/index.html
@@ -51,35 +51,43 @@
   <ul class="text edu">
     <li>ABU Robocon 2017-18<br>
       <div class="sub">
+        <b>Duration:</b> September 2017 - March 2018<br>
+        <b>Team Size:</b> 25<br>
+        <b>Role:</b> Arduino Developer<br>
         Robocon is a National Level Robotics Competition where a college team has to create robots to compete in a game.
         <i><br>I was a part of the programming team , responsible for creating the navigation system of the Automatic robot <br>
           During this I utilised C for <b>Arduino</b> Programming and <b>Python</b> on a Raspberry Pi. Also I learned to work in a large group.
         </i>
       </div><br>
     </li>
-	<li>Website for College Cultural Fest - Resonance 2019<br>
+    <li>Website for College Cultural Fest - Resonance 2019<br>
       <div class="sub">
+        <b>Duration:</b> 1 February 2019 - 13 February 2019<br>
         Marvel Themed Website for my College's Annual Cultural Festival<br>
-        <i>Learned the basics of <b>AJAX</b> using vanilla <b>JavaScript</b> and used <b>Firebase</b> for hosting and as the backend. The biggest challenge was to complete the Website as fast as possible as i was assigned the project 2 weeks before the event.<br>
+        <i>In this Project I learned the basics of <b>AJAX</b> using vanilla <b>JavaScript</b> and used <b>Firebase</b> for hosting and as the backend. The biggest challenge was to complete the Website as fast as possible as i was assigned the
+          project 2 weeks before the event.<br>
         </i>
-		<a href="https://github.com/AakashKhatu/Resonance2019">github.com/AakashKhatu/Resonance2019</a><br>
-		<a href="https://aakashkhatu.github.io/Resonance2019/">aakashkhatu.github.io/Resonance2019 (mirror , not fully functional)</a>(Original Website hosted on firebase was taken down after the event)<br>
+        <a href="https://github.com/AakashKhatu/Resonance2019">github.com/AakashKhatu/Resonance2019</a><br>
+        <a href="https://aakashkhatu.github.io/Resonance2019/">aakashkhatu.github.io/Resonance2019 ( mirror, not fully functional )</a> ( Original Website hosted on firebase was taken down after the event )<br>
       </div><br>
     </li>
     <li>ParallelOCR ( <i>ongoing</i> )
       <div class="sub">
+        <b>Start Date:</b> 28 February 2019<br>
         Python Application Using Parallel Processing and Machine Learning to Make Optical Character Recognition faster on Capable Hardware.<br>
-        <i>This project is currently being worked on by me with my Professor Prathamesh Tugaonkar. <br><br>
-        this project helped me to practically implement my <b>Machine Learning</b> knowledge and I learned to Gather and Format Data for Training. In this project i also learned to efficiently divide a linear program into pieces to be Efficient in <b>Parallel Processing</b> situations. <br> </i>
+        <i>This project is currently being worked on by me with my Professor Prathamesh Tugaonkar. <br>
+          this project helped me to practically implement my <b>Machine Learning</b> knowledge and I learned to Gather and Format Data for Training. In this project i also learned to efficiently divide a linear program into pieces to be Efficient in
+          <b>Parallel Processing</b> situations. <br> </i>
         <a href="https://aakashkhatu.github.io/ParallelOCR/">Project Progress</a><br>
         <a href="https://github.com/AakashKhatu/ParallelOCR">github.com/AakashKhatu/ParallelOCR</a>
       </div><br>
     </li>
     <li>BetterERP
       <div class="sub">
+        <b>Duration:</b> 10 January 2019 - 21 January 2019<br>
         Personal use website for making my College ERP easier to use and add QOL features which save a lot of time.<br>
         <i>I made this website to save my own time over the upcoming 2 years of college as we have to use the ERP for everything in college.
-          I used <b>Selenium</b> in <b>Python</b> for Scraping the data and  <b>Django</b> as the server backend. This Website also helps me to automatically Complete or Format Assignments using data from Search Engines.<br>
+          I used <b>Selenium</b> in <b>Python</b> for Scraping the data and <b>Django</b> as the server backend. This Website also helps me to automatically Complete or Format Assignments using data from Search Engines.<br>
         </i>
         <a href="https://aakashkhatu.github.io/better-erp/">Detailed Project Description</a><br>
         [Github repository is private as it has my college-ERP's credentials and also because this project is only for personal use]
@@ -87,6 +95,9 @@
     </li>
     <li>iDontNeedThis ( <i>ongoing</i> )
       <div class="sub">
+        <b>Start Date:</b> 4 April 2019<br>
+        <b>Team Size:</b> 5<br>
+        <b>Role:</b> Leader, Backend Developer<br>
         Webservice to Streamline the process of Donating<br>
         <i>This project was made in a Group of 5 people lead by me for the RAIT Hackathon completely in 24 hours . It includes an Android, iOS App and a Website<br>
           As the Leader my main job was to Present the Project and Time Manage my team. I also created the backend in <b>Django</b> to tie together the Apps and Website.
@@ -97,6 +108,7 @@
     </li>
     <li>itsNeverTooLate
       <div class="sub">
+        <b>Date:</b> 14 April 2019<br>
         TamperMonkey UserScript to Allow the Uploading of Assignments to the College ERP after the Due Date has passed.<br>
         <i>The main purpose of this was to show the limitations of the College ERP to my Teachers. The UserScript was written in <b>JavaScript</b> in 6 minutes after some research.
         </i>
@@ -105,6 +117,7 @@
     </li>
     <li>Discord Update Notification Bot
       <div class="sub">
+        <b>Duration:</b> April 2017<br>
         This Program is a Discord Bot that notifies the user whenever a followed game updates also has other fun features.
         <i><br>Main purpose of this project was to learn <b>Concurrent Programming</b> in <b>Python</b> using the Asyncio library.
           Also learned to use <b>Git</b> and used Heroku for hosting the bot Online.
@@ -114,15 +127,17 @@
     </li>
     <li>Graphics Designing for E-Sports teams and players
       <div class="sub">
+        <b>Duration:</b> September 2016 - August 2017<br>
         Designed Logos and Animations for E-Sports teams and Players as a hobby. <br>
-        <a href="zer0k.imgur.com/all/">zer0k.imgur.com</a>
+        <a href="https://imgur.com/a/HQdSc">zer0k.imgur.com</a>
       </div><br>
     </li>
   </ul>
- <h1 id="courses" class="text header">Certification Courses</h1>
+  <h1 id="courses" class="text header">Certification Courses</h1>
   <ul class="text edu">
     <li>NPTEL course for Introduction to Machine Learning
       <div class="sub">
+        <b>Duration:</b> August 2018 - October 2018<br>
         This course provides a concise introduction to the fundamental concepts in machine learning and popular machine learning algorithms.<br>
         <i>I took up this course to learn the basics of <b>Machine Learning</b> for a personal project.<br>
         </i>
@@ -131,6 +146,7 @@
     </li>
     <li>NPTEL course for Programming, Data Structures and Algorithms Using Python
       <div class="sub">
+        <b>Duration:</b> January 2019 - March 2019<br>
         This course is an introduction to programming and problem solving in Python.<br>
         <i>I took up this course to certify my <b>Python</b> Skills.<br>
         </i>
@@ -138,20 +154,10 @@
       </div><br>
     </li>
   </ul>
-  <div class="hide">
-    <label class="text Header" for="item-3">
-      <h1>Contact Me<h1>
-    </label>
-    <input type="checkbox" name="one" id="item-3">
-    <div class="contact">
-      <form action="https://formspree.io/aakashkhatu98@gmail.com" method="POST">
-        <label>Name</label><br><input type="text" name="name" required><br>
-        <label>Email</label><br><input type="email" name="_replyto" required><br>
-        <label>Message</label><br><input type="text" name="message" required><br>
-        <input type="submit" value="Send">
-      </form>
-    </div>
+  <div class="no-print text">
+     <h2 onclick="window.print()" class="print-button"><i class="fa fa-print" aria-hidden="true"></i> Print This Page <h2>
   </div>
+
 </body>
 
 </html>
