--- a/resume/index.html
+++ b/resume/index.html
@@ -12,17 +12,17 @@
   </div>
   <hr width=50%>
   <div class="contact">
-    <a href="mailto:aakashkhatu98@gmail.com"><i class="fas fa-envelope"></i> aakashkhatu98@gmail</a> <i class="fas fa-map-marker-alt"></i> Airoli, Navi Mumbai <br>
-    <a href="https://github.com/AakashKhatu"><i class="fab fa-github"></i> github.com/AakashKhatu </a>
+    <a href="mailto:aakashkhatu@tuta.io"><i class="fas fa-envelope"></i> aakashkhatu@tuta.io</a> &emsp;<i class="fas fa-map-marker-alt"></i> Airoli, Navi Mumbai <br>
+    <a href="https://github.com/AakashKhatu"><i class="fab fa-github"></i> github.com/AakashKhatu </a><br><a href="https://aakashkhatu.github.io/resume"><i class="far fa-file"></i> aakashkhatu.github.io/resume</a>
   </div>
 </head>
 
 <body>
   <h1 class="text header">Education</h1>
   <ul class="text edu">
-    <li>Bachelor of Engineering (B.E), Computer Science & Engineering ( Current )<br>
+    <li>Bachelor of Engineering (B.E), Computer Science & Engineering<br>
       <div class="text sub">
-        Year of Completion: 2021<br>
+        Year of Completion: 2021 ( Ongoing )<br>
         Terna Engineering College<br>
         CGPA (First Year) : 7.20/10<br></div>
     </li>
@@ -30,24 +30,41 @@
       XII (Senior Secondary), Science<br>
       <div class="text sub">
         Year of Completion: 2017<br>
-        HSC Board (IITIAN's Pace Junior Science College, Powai)<br>
+        HSC Board - IITIAN's Pace Junior Science College, Powai<br>
         Percentage : 75.00%<br>
       </div>
     </li>
     <li>
       X (Secondary)<br>
       <div class="text sub">Year of Completion: 2014 <br>
-        CBSE Board (DAV Public School, Airoli) <br>
+        CBSE Board - DAV Public School, Airoli <br>
         CGPA : 9.10/10 <br></div>
     </li>
   </ul>
   <h1 class="text header"> Skills </h1>
   <ul class="text edu">
-    <li>Proficient in <b>C</b> & <b>Python</b></li>
-    <li>Have experience in C++, C# (Unity ) , Django, Java, Web Design (HTML & CSS) and Graphics Design (Adobe Illustrator & Photoshop)</li>
-    <li>I am a Fast Learner so I can understand and learn to implement new technologies pretty quickly.</li>
+    <li><b>Technical Skills</b><ul>
+	<li>Django</li>
+	<li>Selenium</li>
+	<li>Flutter</li>
+	<li>Arduino</li>
+	<li>Front-End Development</li>
+	</ul></li>
+	<li><b>Programming Languages</b>
+	<ul><li>Python</li>
+	<li>C / C++</li>
+	<li>Dart</li>
+	<li>CSS/Sass</li>
+	<li>Java</li>
+	<li>JavaScript</li>
+	</ul>
+	<li><b>Non - Technical Skills</b><ul>
+	<li>Adobe Illustrator</li>
+	<li>Adobe Photoshop</li>
+	<li>Adobe After Effects</li>
+	</ul></li>
   </ul>
-  <h1 id="projects" class="text header">Projects </h1>
+  <h1 id="projects" class="text header brk">Projects </h1>
   <ul class="text edu">
     <li>ABU Robocon 2017-18<br>
       <div class="sub">
@@ -78,7 +95,7 @@
         <i>This project is currently being worked on by me with my Professor Prathamesh Tugaonkar. <br>
           this project helped me to practically implement my <b>Machine Learning</b> knowledge and I learned to Gather and Format Data for Training. In this project i also learned to efficiently divide a linear program into pieces to be Efficient in
           <b>Parallel Processing</b> situations. <br> </i>
-        <a href="https://aakashkhatu.github.io/ParallelOCR/">Project Progress</a><br>
+        <a href="https://aakashkhatu.github.io/ParallelOCR/">Project Progress [aakashkhatu.github.io/ParallelOCR]</a><br>
         <a href="https://github.com/AakashKhatu/ParallelOCR">github.com/AakashKhatu/ParallelOCR</a>
       </div><br>
     </li>
@@ -89,7 +106,7 @@
         <i>I made this website to save my own time over the upcoming 2 years of college as we have to use the ERP for everything in college.
           I used <b>Selenium</b> in <b>Python</b> for Scraping the data and <b>Django</b> as the server backend. This Website also helps me to automatically Complete or Format Assignments using data from Search Engines.<br>
         </i>
-        <a href="https://aakashkhatu.github.io/better-erp/">Detailed Project Description</a><br>
+        <a href="https://aakashkhatu.github.io/better-erp/">Detailed Project Description [aakashkhatu.github.io/better-erp]</a><br>
         [Github repository is private as it has my college-ERP's credentials and also because this project is only for personal use]
       </div><br>
     </li>
@@ -129,7 +146,7 @@
       <div class="sub">
         <b>Duration:</b> September 2016 - August 2017<br>
         Designed Logos and Animations for E-Sports teams and Players as a hobby. <br>
-        <a href="https://imgur.com/a/HQdSc">zer0k.imgur.com</a>
+        <a href="https://imgur.com/a/HQdSc">zer0k.imgur.com [imgur.com/a/HQdSc]</a>
       </div><br>
     </li>
   </ul>
@@ -141,7 +158,7 @@
         This course provides a concise introduction to the fundamental concepts in machine learning and popular machine learning algorithms.<br>
         <i>I took up this course to learn the basics of <b>Machine Learning</b> for a personal project.<br>
         </i>
-        <a href="https://nptel.ac.in/noc/E_Certificate/noc18-cs40/NPTEL18CS40S116713131810141890.jpg">Certificate</a>
+        <a href="https://nptel.ac.in/noc/E_Certificate/noc18-cs40/NPTEL18CS40S116713131810141890.jpg">Certificate ( https://nptel.ac.in/noc/E_Certificate/noc18-cs40/NPTEL18CS40S116713131810141890.jpg )</a>
       </div><br>
     </li>
     <li>NPTEL course for Programming, Data Structures and Algorithms Using Python
@@ -150,7 +167,7 @@
         This course is an introduction to programming and problem solving in Python.<br>
         <i>I took up this course to certify my <b>Python</b> Skills.<br>
         </i>
-        <a href="https://nptel.ac.in/noc/E_Certificate/noc19-cs08/NPTEL19CS08S11600052191088556.jpg">Certificate</a>
+        <a href="https://nptel.ac.in/noc/E_Certificate/noc19-cs08/NPTEL19CS08S11600052191088556.jpg">Certificate ( https://nptel.ac.in/noc/E_Certificate/noc19-cs08/NPTEL19CS08S11600052191088556.jpg )</a>
       </div><br>
     </li>
   </ul>
