--- a/resume/index.html
+++ b/resume/index.html
@@ -40,8 +40,8 @@
                     <li>Periodic backups of Databases and maintaining consistency of Databases over Servers.</li>
                     <li>Fixing UI bugs on the website.</li>
                 </ul>
-                Working on creating an easy-to-use data submission system for a Visual Dictionary, using <b>HTML</b> and
-                <b>CSS</b> for the UI and <b>Node.js</b> as the backend.
+                Currently working on creating an easy-to-use data submission system for a Visual Dictionary, using <b>HTML</b>, 
+                <b>CSS</b> and <b>JavaScript</b> for the UI and <b>Node.js</b> as the backend.
             </div>
         </li>
         <li>Apli.ai, Mumbai<br>
