updated Kamusi and added Hertech hackathon

--- a/resume/index.html
+++ b/resume/index.html
@@ -26,34 +26,37 @@
         <li>Kamusi Project International<br>
             <div class="sub">
                 <b>Duration:</b> June 2019 - Present<br>
-                <b>Role:</b> Volunteer <br>
-                Developed scripts in <b>Python</b> and <b>Cypher</b> for managing the <b>Neo4j</b> database for
-                Languages, some of my major projects would be:
+                <b>Role:</b> Intern <br>
+                Developed scripts in <b>Python</b> and <b>Cypher</b> for managing the <b>Neo4j</b> database for 7000
+                Languages, some of my major projects include:
                 <ul class="sub">
-                    <li>Modifying the structure of the complete dictionary database with Millions of Nodes and Relations
-                        in Neo4j for facilitating even more Accurate translations in the future.</li>
-                    <li>Correcting and Updating Data for Languages.</li>
+                    <li>Participating in the modification of the structure of the complete dictionary database, with
+                        millions of nodes and relations in Neo4j for facilitating even more accurate translations in the
+                        future.</li>
+                    <li>Correcting and updating data for languages from diverse datasets.</li>
                 </ul>
                 Along with this some of my minor tasks include:
                 <ul class="sub">
-                    <li>Managing the servers over SSH, recovering from crashes, managing access.</li>
-                    <li>Periodic backups of Databases and maintaining consistency of Databases over Servers.</li>
+                    <li>Managing the servers over SSH, recovering from crashes and managing access.</li>
+                    <li>Periodic backups of databases and maintaining consistency of databases over Servers.</li>
                     <li>Fixing UI bugs on the website.</li>
+                    <li>Assisting new interns with on-boarding</li>
                 </ul>
-                Currently working on creating an easy-to-use data submission system for a Visual Dictionary, using <b>HTML</b>, 
-                <b>CSS</b> and <b>JavaScript</b> for the UI and <b>Node.js</b> as the backend.
+                Currently working on creating an easy-to-use data submission system for a Visual Dictionary, using
+                <b>HTML</b>, <b>CSS</b> and <b>JavaScript</b> for the UI and <b>Node.js</b> as the backend.
             </div>
         </li>
         <li>Apli.ai, Mumbai<br>
             <div class="sub">
                 <b>Duration:</b> June - August 2019<br>
-                <b>Role:</b> Web Design Intern <br>
+                <b>Role:</b> Web Development Intern <br>
                 At apli.ai the major Projects which I worked on were:
                 <ul class="sub">
                     <li>Creating UI using Datatables for representing data in a very easy to read format.</li>
                     <li>Modifying Parts of the website according to the Design document given by the Web Designer.</li>
                 </ul>
-                Also I wrote Documentation for the code and Fixed bugs in the UI, and suggested changes to improve the UX.
+                Also I wrote Documentation for the code and Fixed bugs in the UI, and suggested changes to improve the
+                UX.
             </div>
         </li>
     </ul>
@@ -101,6 +104,20 @@
                 </i>
             </div><br>
         </li>
+        <li>HerTech Hackathon, Pune<br>
+            <div class="sub">
+                <b>Date</b> September 2017 - March 2018<br>
+                <b>Team Size:</b> 4<br>
+                The HerTech Hackathon was a Facebook Sponsored event, Our submission was a Web Service which would
+                analyze the sentiments of the user while watching a video by tracking the nodal points on the user's
+                face with the webcam.
+                <i><br>I was responsible for creating the Data collection demo using <b>TensorFlow</b> and <b>Dlib</b>
+                    in <b>Python</b><br>
+                    I also presented our project's demo in the presence of 6 jury members and all the teams, and my team was
+                    placed in the <b>Top 9</b>.
+                </i>
+            </div><br>
+        </li>
         <li>Website for College Cultural Fest - Resonance 2019<br>
             <div class="sub">
                 <b>Duration:</b> 1 February 2019 - 13 February 2019<br>
@@ -115,7 +132,7 @@
                     fully functional )</a> ( Original Website hosted on firebase was taken down after the event )<br>
             </div><br>
         </li>
-        <li>ParallelOCR ( <i>ongoing</i> )
+        <li>ParallelOCR
             <div class="sub">
                 <b>Start Date:</b> 28 February 2019<br>
                 Python Application Using Parallel Processing and Machine Learning to Make Optical Character Recognition
