added here hackathon

--- a/resume/index.html
+++ b/resume/index.html
@@ -106,15 +106,31 @@
         </li>
         <li>HerTech Hackathon, Pune<br>
             <div class="sub">
-                <b>Date</b> September 2017 - March 2018<br>
+                <b>Date</b>15th June 2019 - 16th June 2019<br>
                 <b>Team Size:</b> 4<br>
                 The HerTech Hackathon was a Facebook Sponsored event, Our submission was a Web Service which would
                 analyze the sentiments of the user while watching a video by tracking the nodal points on the user's
                 face with the webcam.
                 <i><br>I was responsible for creating the Data collection demo using <b>TensorFlow</b> and <b>Dlib</b>
                     in <b>Python</b><br>
-                    I also presented our project's demo in the presence of 6 jury members and all the teams, and my team was
+                    I also presented our project's demo in the presence of 6 jury members and all the teams, and my team
+                    was
                     placed in the <b>Top 9</b>.
+                </i>
+            </div><br>
+        </li>
+        <li>Here - Smart Mobility Hackathon, Mumbai<br>
+            <div class="sub">
+                <b>Date</b> 27th July 2019 - 28th July 2019<br>
+                <b>Team Size:</b> 4<br>
+                Our Project for Here Hack was a smartphone app that would utilize the phones sensors like Accelerometer
+                and Gyroscope to assign a comfortability rating to roads, this data can later be used for selecting the
+                ideal route according to the users preferences.
+                <i><br>As the leader I was responsible for assigning the tasks to my team members and time managing my
+                    team. Alongwith these tasks i also created the data processing algorithm's proof of concept in
+                    <b>C</b> and
+                    <b>Python</b><br>
+                    My team was placed in the Top 10, because of the simple yet well thought out project.
                 </i>
             </div><br>
         </li>
