edited skills section

--- a/resume/index.html
+++ b/resume/index.html
@@ -65,10 +65,12 @@
         <li><b>Technical Skills</b>
             <ul>
                 <li>Django</li>
+                <li>Neo4j</li>
                 <li>Selenium</li>
                 <li>Flutter</li>
                 <li>Arduino</li>
                 <li>Front-End Development</li>
+                <li>Linux Server Administration</li>
             </ul>
         </li>
         <li><b>Programming Languages</b>
@@ -77,7 +79,6 @@
                 <li>C / C++</li>
                 <li>Dart</li>
                 <li>CSS/Sass</li>
-                <li>Java</li>
                 <li>JavaScript</li>
             </ul>
         <li><b>Non - Technical Skills</b>
@@ -123,6 +124,7 @@
             <div class="sub">
                 <b>Date</b> 27th July 2019 - 28th July 2019<br>
                 <b>Team Size:</b> 4<br>
+                <b>Role:</b> Leader<br>
                 Our Project for Here Hack was a smartphone app that would utilize the phones sensors like Accelerometer
                 and Gyroscope to assign a comfortability rating to roads, this data can later be used for selecting the
                 ideal route according to the users preferences.
@@ -130,7 +132,7 @@
                     team. Alongwith these tasks i also created the data processing algorithm's proof of concept in
                     <b>C</b> and
                     <b>Python</b><br>
-                    My team was placed in the Top 10, because of the simple yet well thought out project.
+                    My team was placed in the <b>Top 10</b>, because of the simple yet well thought out project.
                 </i>
             </div><br>
         </li>
