--- a/resume/index.html
+++ b/resume/index.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-    <h1 id="projects" class="text header brk">Work Experience</h1>
+    <h1 id="projects" class="text header">Work Experience</h1>
     <ul class="text edu">
         <li>Kamusi Project International<br>
             <div class="sub">
@@ -46,7 +46,7 @@
                 <b>HTML</b>, <b>CSS</b> and <b>JavaScript</b> for the UI and <b>Node.js</b> as the backend.
             </div>
         </li>
-        <li>Apli.ai, Mumbai<br>
+        <li hidden> Apli.ai, Mumbai<br>
             <div class="sub">
                 <b>Duration:</b> June - August 2019<br>
                 <b>Role:</b> Web Development Intern <br>
@@ -64,12 +64,12 @@
     <ul class="text edu">
         <li><b>Technical Skills</b>
             <ul>
-                <li>Django</li>
-                <li>Neo4j</li>
+                <li>Graph Databases - Neo4j</li>
                 <li>Selenium</li>
+                <li>Machine Learning</li>
                 <li>Flutter</li>
                 <li>Arduino</li>
-                <li>Front-End Development</li>
+                <li>Full Stack Web Development</li>
                 <li>Linux Server Administration</li>
             </ul>
         </li>
@@ -77,7 +77,6 @@
             <ul>
                 <li>Python</li>
                 <li>C / C++</li>
-                <li>Dart</li>
                 <li>CSS/Sass</li>
                 <li>JavaScript</li>
             </ul>
@@ -89,7 +88,7 @@
             </ul>
         </li>
     </ul>
-    <h1 id="projects" class="text header brk">Projects </h1>
+    <h1 id="projects" class="text header">Projects </h1>
     <ul class="text edu">
         <li>ABU Robocon 2017-18<br>
             <div class="sub">
@@ -182,7 +181,7 @@
                 only for personal use]
             </div><br>
         </li>
-        <li>iDontNeedThis ( <i>ongoing</i> )
+        <li>iDontNeedThis
             <div class="sub">
                 <b>Start Date:</b> 4 April 2019<br>
                 <b>Team Size:</b> 5<br>
@@ -216,7 +215,7 @@
                 features.
                 <i><br>Main purpose of this project was to learn <b>Concurrent Programming</b> in <b>Python</b> using
                     the Asyncio library.
-                    Also learned to use <b>Git</b> and used Heroku for hosting the bot Online.
+                    Also learned to use <b>Git</b> and used <b>Heroku</b> for hosting the bot Online.
                 </i>
                 <a
                     href="https://github.com/AakashKhatu/Discord-CSGO-Update-bot">github.com/AakashKhatu/Discord-CSGO-Update-bot</a>
