updated a few projects and added TI

--- a/resume/index.html
+++ b/resume/index.html
@@ -26,7 +26,7 @@
         <li>Kamusi Project International<br>
             <div class="sub">
                 <b>Duration:</b> June 2019 - Present<br>
-                <b>Role:</b> Intern <br>
+                <b>Role:</b> Intern & Volunteer <br>
                 Developed scripts in <b>Python</b> and <b>Cypher</b> for managing the <b>Neo4j</b> database for 7000
                 Languages, some of my major projects include:
                 <ul class="sub">
@@ -46,7 +46,7 @@
                 <b>HTML</b>, <b>CSS</b> and <b>JavaScript</b> for the UI and <b>Node.js</b> as the backend.
             </div>
         </li>
-        <li hidden> Apli.ai, Mumbai<br>
+        <li> Apli.ai, Mumbai<br>
             <div class="sub">
                 <b>Duration:</b> June - August 2019<br>
                 <b>Role:</b> Web Development Intern <br>
@@ -59,6 +59,35 @@
                 UX.
             </div>
         </li>
+        <li>Texas Instruments Innovation Center, Terna Engineering College, Nerul<br>
+            <div class="sub">
+                <b>Duration:</b> December 2019 - January 2020<br>
+                <b>Role:</b> Project Internship <br>
+                At TI Innovation Center, I Alongwith 2 team members worked on making a 2D pen plotter, the major function 
+                of which was to take paths as input from a Raspberry Pi and using a frame controlled with stepper motors,
+                draw the given path on a paper using a pen. The highlights of this project were: 
+                <ul class="sub">
+                    <li>3D Modeling and fabrication of the required parts with wood.</li>
+                    <li>Researching and implementing various electronic devices such as Stepper Motors, motor drivers, etc.</li>
+                    <li>Using Microcontrollers and programming them with C to control the electronic components.</li>
+                </ul>
+                Also I wrote Documentation for the code and Fixed bugs in the UI, and suggested changes to improve the
+                UX.
+            </div>
+        </li>
+        <li> Lab Session on Deep Learning & Application for the Faculty Development Program at Terna Engineering College.<br>
+            <div class="sub">
+                <b>Date:</b> 10 December 2019<br>
+                I conducted a Hands-on workshop on the topic of "Deep Learning and Application Lab" in  Ministry of Electronics & Information Technology,
+                Government of India Sponsored Faculty Development Programme on Deep Learning & its Application. 
+                In the session attended by about 30 faculties of my college, the major topics I covered were:
+                <ul class="sub">
+                    <li>Basics of Jupyter Notebooks for Machine Learning</li>
+                    <li>Using Google Colab for training and executing machine learning applications in the cloud</li>
+                    <li>Training a cat vs dog classification deep learning model on Google Colab</li>
+                </ul>
+            </div>
+        </li>
     </ul>
     <h1 class="text header"> Skills </h1>
     <ul class="text edu">
@@ -67,7 +96,7 @@
                 <li>Graph Databases - Neo4j</li>
                 <li>Selenium</li>
                 <li>Machine Learning</li>
-                <li>Flutter</li>
+                <li>Android</li>
                 <li>Arduino</li>
                 <li>Full Stack Web Development</li>
                 <li>Linux Server Administration</li>
@@ -104,9 +133,22 @@
                 </i>
             </div><br>
         </li>
+        <li>Smart India Hackathon 2020<br>
+            <div class="sub">
+                <b>Team Size:</b> 6<br>
+                <b>Role:</b> Leader<br>
+                For this Hackathon I decided to improve on one of my previous projects, which Predicted the Attentiveness of a student
+                in an online video lecture.
+                My Major task along with coordinating the team's tasks was to work on the Architecture of the <b>Machine Learning</b> model.
+                The Internal Hackathon was conducted on 22 January 2020 and the <b>Grand Finale</b> is scheduled to be conducted in the month of July
+                in Chennai.
+                <br><i>Please refer the below Presentation for more Information about this project.</i>
+                <br><a href="https://docs.google.com/presentation/d/1d8_vQGpZBg6H_PsWcVAL2JSNkLcX_VxBrLYn-X7IF8A/edit?usp=sharing">Presentation Explaining the Details of the Project</a>
+            </div><br>
+        </li>
         <li>HerTech Hackathon, Pune<br>
             <div class="sub">
-                <b>Date</b>15th June 2019 - 16th June 2019<br>
+                <b>Date: </b>15th June 2019 - 16th June 2019<br>
                 <b>Team Size:</b> 4<br>
                 The HerTech Hackathon was a Facebook Sponsored event, Our submission was a Web Service which would
                 analyze the sentiments of the user while watching a video by tracking the nodal points on the user's
@@ -121,7 +163,7 @@
         </li>
         <li>Here - Smart Mobility Hackathon, Mumbai<br>
             <div class="sub">
-                <b>Date</b> 27th July 2019 - 28th July 2019<br>
+                <b>Date: </b> 27th July 2019 - 28th July 2019<br>
                 <b>Team Size:</b> 4<br>
                 <b>Role:</b> Leader<br>
                 Our Project for Here Hack was a smartphone app that would utilize the phones sensors like Accelerometer
