--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="text">
       <h1>Main website is currently under Development!</h1>
     <br>
-      <form action="./resume/">
+      <form action="./cv/">
       <input  class="button" type="submit" value="Résumé" />
   </form></div>
   </body>
